# aido-cli

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yaml
src/: authentication.rs  lib.rs  main.rs
