[package]
name = "aido"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
copypasta = "0.8.1"
copypasta-ext = "0.3.9"
home = "0.5.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spinners-rs = "2.3.0"
tokio = { version = "1.12.0", features = ["full"] }
